# casetta

./: README.md  environment.yml  main.py
casetta/: casetta.py
casetta/config/: config.json
casetta/modules/: base_module.py  building.py  cold_thermal_energy_storage.py  electric_battery.py  energy_exchange_manager.py  grid.py  heat_pump.py  hot_thermal_energy_storage.py  hvac.py  photovoltaic.py
casetta/modules/building/: building.py  hvac.py
casetta/modules/core/: base_exchange_manager.py  base_module.py  energy_consumer.py  energy_producer.py  hot_water_consumer.py  hot_water_producer.py  thermal_consumer.py  thermal_producer.py
casetta/modules/electricity/: electric_battery.py  grid.py  photovoltaic.py
casetta/modules/exchange/: energy_exchange_manager.py  hot_water_exchange_manager.py  thermal_exchange_manager.py
casetta/modules/thermal/: domestic_hot_water_tank.py  (+2 more)
casetta/utils/: common.py  modules_factory.py  types.py
casetta_env/: __init__.py  pyproject.toml
casetta_env/casetta/: casetta.py
casetta_env/modules/building/: building.py  hvac.py
casetta_env/modules/core/: energy_consumer.py  energy_producer.py  hot_water_consumer.py  hot_water_producer.py  thermal_consumer.py  thermal_producer.py
casetta_env/modules/electricity/: electric_battery.py  grid.py  photovoltaic.py
casetta_env/modules/exchange/: energy_exchange_manager.py  hot_water_exchange_manager.py  thermal_exchange_manager.py
casetta_env/modules/thermal/: domestic_hot_water_tank.py  heat_pump.py  thermal_energy_storage.py
casetta_env/utils/: common.py  modules_factory.py
